--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Portfolio de  2019</title>
+    <title>Tiercelin BIZINDAVYI : Front-End Web Developer/ Entrepreneur à temps plein.</title>
+    <link rel="stylesheet" href="./CSS/main.css">
 </head>
 <body>
+    <header>
+        <a href="index.html">LOgOUT;)</a>
+    </header>
     
 </body>
 </html>
