uploaded, changed and modified files index.html and main.css

--- a/index.html
+++ b/index.html
@@ -4,13 +4,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Muli|Open+Sans|Poppins" rel="stylesheet">
     <title>Tiercelin BIZINDAVYI : Front-End Web Developer/ Entrepreneur à temps plein.</title>
     <link rel="stylesheet" href="./CSS/main.css">
 </head>
 <body>
-    <header>
-        <a href="index.html">LO gOUT;)</a>
-    </header>
+    <div id="container">
+        <div class="sidebar">
+            <nav>
+                <ul>
+                    <li><a href="#" title="About Me">A propos</a></li>
+                    <li><a href="#" title="Portfolio">Portfolio</a></li>
+                    <li><a href="#" title="Services">Services</a></li>
+                    <li><a href="#" title="Get In Touch">Contact</a></li>
+                    <!-- <li><a href="#" title=""></a></li> -->
+                </ul>
+            </nav>
+        </div>
+
+
+
+
+        <div class="content">
+            <section class="hero">
+                <img src="./media/logo-perso.jpeg" alt="Logo officiel" class="img">
+                <div class="hero-content">
+                    <h1>UI/UX Designer <br>Front-End Web Developer</h1>
+                    <p>Avec deux ans d'expérience Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor esse, incidunt numquam eum praesentium aliquam deleniti! Excepturi, laborum voluptatibus aperiam odio culpa, atque harum veniam consequatur quas velit omnis corrupti.,
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nesciunt quos quod aperiam possimus, porro dolores aut veniam obcaecati placeat fugit? Provident dolorum minima commodi facilis earum sunt laborum magni!
+                    </p>
+                    <a class="action-btn" href="#">Contactez moi</a>
+                </div>   
+            </section>
+        </div>
+
+
+
+
+        <div class="footer">
+            <footer>
+                <ul>
+                    <li><a href="#"><img src="./media/linkedin.svg"alt="linkedin"></a></li>
+                    <li><a href="#"><img src="./media/github.svg"alt="github"></a></li>
+                    <li><a href="#"><img src="./media/dribble-logo.svg"alt="Dribble"></a></li>
+                    <!-- <li><a href="#"><img src="./media/linkedin.svg"alt=""></a></li> -->
+
+                </ul>
+            </footer>
+
+        </div>
+
+
+
+
+
+    </div>
     
 </body>
 </html>
